feat(PMB-13): create endpoint to add a friend
