# src/main/java/com/lulippe/paymybuddy/api/controller/TransactionController.java
@@ -6,11 +6,11 @@ import com.lulippe.paymybuddy.transaction.model.Transfer;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+
+import static com.lulippe.paymybuddy.utils.AuthenticationUtil.getAuthenticatedUserEmail;
 
 @Slf4j
 @RestController
@@ -21,8 +21,7 @@ public class TransactionController implements TransactionsApi {
 
     @Override
     public ResponseEntity<List<Transfer>> getUserTransactionList() {
-        final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        final String email = authentication.getName();
+        final String email = getAuthenticatedUserEmail();
         log.info("Fetching transactions for user: {}", email);
         List<Transfer> transactions = transactionService.getUserSentTransactionList(email);
         return ResponseEntity.ok(transactions);
